If items are removed from the dir model, remove them also from KFilePreviewGenerator's list of recently changed items. This should fix crashes that occur when a file item becomes invalid just after it is changed, e.g., if a large file is moved to a volume which is then unmounted immediately.

Fix will be in KDE 4.4 Beta 1.

BUG: 211525

svn path=/trunk/KDE/kdelibs/; revision=1055748