kfile/kfilepreviewgenerator.h
@@ -132,6 +132,7 @@ private:
     Q_PRIVATE_SLOT(d, void resolveMimeType())
     Q_PRIVATE_SLOT(d, void requestSequenceIcon(const QModelIndex&, int))
     Q_PRIVATE_SLOT(d, void delayedIconUpdate())
+    Q_PRIVATE_SLOT(d, void rowsAboutToBeRemoved(const QModelIndex&, int, int))
 };
 
 #endif
